2010-06-02  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* io.h (tino_io_flush_write): added

2010-01-25  Valentin Hilbig  <tino@firebird.03.softkill.net>

	* str.h (tino_str_arg): bugfix: similar quotes like '' now work.

	* proc.h (tino_fd_move): debug now corrected

	* sock.h (tino_sock_get_adrnameN): this is better now, but still
	incorrect.  How to get the sockname() of a socketpair() without
	rubbish?

	* debug.h (TINO_DP_str): added

	* strargs.h: added

	* procsock.h: added

2009-08-13  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* put.h (tino_put_ansi_buf): added

	* io.h (tino_io_verr): implemented

	* hash.h (tino_hash_imp_store_key): now NUL is added to key, just
	in case it should be used as a string.

	* alloc.h (tino_memdup_moreO, tino_memdup_more0O, tino_memdup0O):
	added

	* io.h (tino_io_std_read): implemented
	(tino_io_ctl, tino_io_vctl, tino_io_pctl): added

2009-08-12  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* filetool.h (tino_file_path_appendO): added

	* bob_jenkins.h: added

	* fileerr.h (tino_file_mmapA, tino_file_munmapA): added

2009-08-01  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* buf_line.h (tino_buf_line_read): errno=0 if OK.  On error
	errno!=0.

	* main_file.h (tino_put_ansi): as the name now is in put.h,
	renamed to tino_main_put_ansi

	* put.h: added

2009-07-31  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* err.h (tino_verr_new): corrected

	* fileerr.h (tino_file_open_readA, tino_file_open_rwA): added
	(tino_file_closeA): added

2009-07-30  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* err.h (tino_verr_new): added last letter support ('C' to 'F')
	and ignore errno support (hopefully this does not break things
	which depend on the new error handler).

2009-07-28  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* file.h (tino_file_open_createI, tino_file_openI): added
	(tino_file_open_createE, tino_file_openE): corrected

2009-07-13  Valentin Hilbig  <tino@zoo.03.softkill.net>
